force-app/main/default/objects/Project_Account_Lead_Relation__c/Project_Account_Lead_Relation__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Project Account Lead Relation</label>
    <nameField>
        <displayFormat>PALR-{00000000}</displayFormat>
        <label>Project Account Lead Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Account Lead Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>