force-app/main/default/objects/Project_Account_Lead_Relation__c/fields/Account_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZR
3. SF-1155</description>
    <label>Account Lead</label>
    <referenceTo>Account_Lead__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Project_Account_Lead_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>