force-app/main/default/objects/Project_Account_Lead_Relation__c/fields/Account_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Project_Account_Lead_Relation__c/&quot;+Account_Lead__r.Id+&quot;/view&quot;, Account_Lead__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lead Name</label>
    <type>Text</type>
</CustomField>