force-app/main/default/objects/Project_Account_Lead_Relation__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>1. Integration relevant
2. ZR
3. SF-1155</description>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Role</valueSetName>
    </valueSet>
</CustomField>