force-app/main/default/objects/Project_Account_Lead_Relation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>1. Integration relevant (ibau, infobau)
2. ZRD
3. SF-1155</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Account Leads</relationshipLabel>
    <relationshipName>Project_Account_Lead_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>